--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,6 @@ redes_sociais:
   - icon: "instagram"
     url: "teste"
     nome: "Instagram"
+
+  
+google_api_key: AIzaSyBOdEQYo2LW1pnOjjcOO0nAHBEOnuMDFIA
